# xf86-video-opentegra

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  opentegra.conf
debian/: rules  (+7 more)
src/: Makefile.am  common_helpers.c  common_helpers.h  compat-api.h  dri2.c  driver.c  driver.h  drm_plane.c  drm_plane.h  drmmode_display.c  drmmode_display.h  exa.c  exa.h  exa_2d.c  exa_composite.c  exa_composite_2d.c  exa_composite_3d.c  exa_composite_3d_state_tracker.c  exa_helpers.c  exa_mm.c  exa_mm.h  exa_mm_fridge.c  exa_mm_pool.c  exa_optimizations.h  exa_optimizations_2d.c  exa_optimizations_3d.c  exa_pixmap.c  gen_shader_bin.c  gen_shaders_h.sh  gr3d.c  gr3d.h  host1x.h  memcpy_vfp.c  memcpy_vfp.h  pool_alloc.c  pool_alloc.h  shaders.h  tegra_fence.h  tegra_stream.c  tegra_stream.h  (+6 more)
src/TLSF/: Makefile.am  tlsf.c
src/asm/: asm.h  fragment_asm.h  fragment_asm.l  fragment_asm.y  linker_asm.h  linker_asm.l  vertex_asm.l  vertex_asm.y
src/exa/: composite.c  composite_2d.c  composite_3d.c  composite_3d_state_tracker.c  copy_2d.c  cpu_access.c  exa.c  exa.h  gen_shader_bin.c  gen_shaders_h.sh  helpers.c  load_screen.c  mm.c  mm_fridge.c  mm_pool.c  optimizations.c  optimizations_2d.c  optimizations_3d.c  pixmap.c  solid_2d.c  tegra_exa.c  tegra_exa.h
src/gpu/: gr3d.c  gr3d.h  host1x.h  tegra_fence.c  tegra_fence.h  tegra_stream.h  tegra_stream_v1.c  tegra_stream_v2.c  tegra_stream_v3.c  tgr_3d.xml.h
src/gpu/gr3d-asm/: fragment_asm.h  fragment_asm.l  fragment_asm.y  linker_asm.y  vertex_asm.h
src/memcpy-vfp/: memcpy_vfp.c  memcpy_vfp.h
src/mempool/: pool_alloc.c  pool_alloc.h
src/shaders/: prog.h  vertex_common.asm
src/shaders/blend_add/blend_add/: fragment.asm
src/shaders/blend_add/blend_add_solid_mask/: fragment.asm
src/shaders/blend_add/blend_add_solid_mask_src/: fragment.asm
src/shaders/blend_add_solid_src/: fragment.asm
src/shaders/blend_atop/blend_atop/: fragment.asm
src/shaders/blend_atop/blend_atop_solid_mask/: fragment.asm
src/shaders/blend_atop/blend_atop_solid_mask_src/: fragment.asm
src/shaders/blend_atop/blend_atop_solid_src/: fragment.asm
src/shaders/blend_atop_reverse/blend_atop_reverse/: fragment.asm
src/shaders/blend_atop_reverse/blend_atop_reverse_solid_src/: fragment.asm  linker.asm
src/shaders/blend_atop_reverse_solid_mask/: vertex.asm
src/shaders/blend_atop_reverse_solid_mask_src/: fragment.asm
src/shaders/blend_atop_reverse_solid_src/: fragment.asm
src/shaders/blend_in/blend_in/: fragment.asm
src/shaders/blend_in_reverse/blend_in_reverse/: fragment.asm
src/shaders/blend_in_reverse/blend_in_reverse_solid_mask_src/: fragment.asm
src/shaders/blend_in_reverse/blend_in_reverse_solid_src/: fragment.asm
src/shaders/blend_in_reverse_solid_mask/: fragment.asm
src/shaders/blend_in_solid_mask/: fragment.asm
src/shaders/blend_in_solid_mask_src/: fragment.asm
src/shaders/blend_out_reverse/: fragment.asm
src/shaders/blend_out_reverse/blend_out_reverse_solid_src/: fragment.asm
src/shaders/blend_out_reverse_solid_mask/: fragment.asm
src/shaders/blend_out_reverse_solid_mask_src/: linker.asm
src/shaders/blend_out_solid_mask_src/: fragment.asm
src/shaders/blend_out_solid_src/: fragment.asm
src/shaders/blend_over/: vertex.asm
src/shaders/blend_over/blend_over/: fragment.asm
src/shaders/blend_over/blend_over_alpha_clamped_src_empty_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_alpha_clamped_src_solid_mask/: fragment.asm
src/shaders/blend_over/blend_over_alpha_clipped_src_solid_mask/: fragment.asm
src/shaders/blend_over/blend_over_alpha_clipped_src_solid_mask_dst_alpha/: fragment.asm
src/shaders/blend_over/blend_over_alpha_clipped_src_solid_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_alpha_normal_src_empty_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_alpha_normal_src_solid_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_opaque_clamped_src_solid_mask/: fragment.asm
src/shaders/blend_over/blend_over_opaque_clamped_src_solid_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_opaque_clipped_src_solid_mask/: fragment.asm
src/shaders/blend_over/blend_over_opaque_clipped_src_solid_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_opaque_pad_src_solid_mask/: fragment.asm
src/shaders/blend_over/blend_over_solid_mask/: fragment.asm
src/shaders/blend_over/blend_over_solid_mask_src/: fragment.asm
src/shaders/blend_over/blend_over_solid_src/: fragment.asm
src/shaders/blend_over/blend_over_solid_src_empty_mask_dst_alpha/: fragment.asm
src/shaders/blend_over/blend_over_solid_src_empty_mask_dst_opaque/: fragment.asm
src/shaders/blend_over/blend_over_solid_src_pad_mask/: fragment.asm
src/shaders/blend_over_reverse/: fragment.asm
src/shaders/blend_over_reverse/blend_over_reverse_solid_mask/: fragment.asm
src/shaders/blend_over_reverse/blend_over_reverse_solid_mask_src/: fragment.asm
src/shaders/blend_over_reverse/blend_over_reverse_solid_src/: fragment.asm
src/shaders/blend_over_solid_mask/: fragment.asm
src/shaders/blend_over_solid_mask_src/: fragment.asm
src/shaders/blend_over_solid_src/: fragment.asm
src/shaders/blend_saturate/: fragment.asm
src/shaders/blend_saturate/blend_saturate_solid_mask/: fragment.asm
src/shaders/blend_saturate/blend_saturate_solid_src/: fragment.asm  linker.asm
src/shaders/blend_saturate_solid_src/: fragment.asm
src/shaders/blend_src/blend_src/: fragment.asm
src/shaders/blend_src/blend_src_clipped_src_solid_mask/: fragment.asm
src/shaders/blend_src_solid_mask_src/: vertex.asm
src/shaders/blend_src_solid_src/: fragment.asm
src/shaders/blend_xor/: fragment.asm  linker.asm
src/shaders/blend_xor_solid_mask_src/: fragment.asm
src/shaders/blend_xor_solid_src/: fragment.asm
src/tegradrm/: atomic.h  lists.h  opentegra_drm.h  opentegra_lib.h  private.h  tegra.c  tegra_bo_cache.c
src/tegradrm/uapi_v1/: channel.c  fence.c  job.c  pushbuf.c  uapi_v1.h
src/tegradrm/uapi_v2/: job.c
src/tegradrm/uapi_v3/: strlcpy.c  sync.c  sync.h  uapi.c
(+31 files in other folders)
